# groupie

./: .gitignore  README.md  gr  pyproject.toml  setup.py  test_groupie.py  test_installation.py  test_script.py
.github/: copilot-instructions.md
groupie/: __init__.py  cli.py  core.py
