[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "groupie"
version = "0.1.0"
description = "Virtual file grouper with missing file management"
readme = "README.md"
authors = [{name = "Nicolas Reategui", email = "nicolasreategui0@gmail.com"}]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.0.0",
]
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/yourusername/groupie"
"Bug Tracker" = "https://github.com/yourusername/groupie/issues"

[project.scripts]
gr = "groupie.cli:main"
